// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressNodes render() should render step 0 if no projectId 1`] = `
<div
  className="onboarding-sidebar"
>
  <div
    className="sentry-flag"
  >
    <span
      className="icon-sentry-logo-full"
      href="/"
    />
  </div>
  <div
    className="progress-nodes"
  >
    <div
      className="node done"
      key="0"
    >
      <span
        className="node done"
      />
      Create an organization in Sentry
    </div>
    <div
      className="node active"
      key="1"
    >
      <span
        className="node active"
      />
      Tell us about your project
    </div>
    <div
      className="node"
      key="2"
    >
      <span
        className="node"
      />
      Configure your application and send an event
    </div>
  </div>
  <div
    className="stuck"
  >
    <a
      href="/organizations/testOrg/support/"
    >
      <p>
         Stuck?
      </p>
      <p>
         Ask for help
      </p>
    </a>
  </div>
</div>
`;

exports[`ProgressNodes render() should render step 1 if has projectId 1`] = `
<div
  className="onboarding-sidebar"
>
  <div
    className="sentry-flag"
  >
    <span
      className="icon-sentry-logo-full"
      href="/"
    />
  </div>
  <div
    className="progress-nodes"
  >
    <div
      className="node done"
      key="0"
    >
      <span
        className="node done"
      />
      Create an organization in Sentry
    </div>
    <div
      className="node done"
      key="1"
    >
      <span
        className="node done"
      />
      Tell us about your project
    </div>
    <div
      className="node active"
      key="2"
    >
      <span
        className="node active"
      />
      Configure your application and send an event
    </div>
  </div>
  <div
    className="stuck"
  >
    <a
      href="/organizations/testOrg/support/"
    >
      <p>
         Stuck?
      </p>
      <p>
         Ask for help
      </p>
    </a>
  </div>
</div>
`;
